--- a/bims/static/css/bug_report_panel_style.css
+++ b/bims/static/css/bug_report_panel_style.css
@@ -3,7 +3,7 @@
     position: fixed;
     right: 0;
     bottom: 0;
-    margin-bottom: 200px;
+    margin-bottom: 50px;
     z-index: 99999;
 }
 
@@ -18,7 +18,7 @@
     margin-right: 15px;
     margin-bottom: 10px;
     background-color: white;
-    width: 400px;
+    max-width: 100%;
     -webkit-box-shadow: 0px 0px 3px 1px rgba(153, 153, 153, 0.53);
     -moz-box-shadow: 0px 0px 3px 1px rgba(153, 153, 153, 0.53);
     box-shadow: 0px 0px 3px 1px rgba(153, 153, 153, 0.53);
