--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -357,7 +357,7 @@
                 <span class="title">
                     LASSO CONTROL
                 </span>
-                <div class="close-button map-result-close pull-right">
+                <div class="close-button lasso-control-close pull-right">
                     <img class="close-icon" src="/static/img/close_icon.svg">
                 </div>
             </div>
@@ -708,7 +708,7 @@
                 </div>
                 <div class="modal-body">
                     <p class="coordinate-form">
-                        Please enter the decimal latitude (positive
+                        Please enter the decimal latitude (negative
                         degrees North) and longitude (positive degrees
                         East) coordinates of your area of interest below!
                         <br/> <br/> e.g. for Cape Town being -33.xxx 19.xxx
