Fix abiotic order in form

--- a/bims/templates/account/logout.html
+++ b/bims/templates/account/logout.html
@@ -3,7 +3,7 @@
 {% load account socialaccount %}
 {% load static from staticfiles %}
 
-{% block subtitle %}Login{% endblock %}
+{% block subtitle %}Logout{% endblock %}
 
 {% block head %}
     <!-- Chosen library -->
