--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -379,43 +379,59 @@
 </script>
 
 <script type="text/html" id="third-party-layer-panel-template">
-    {# lasso control container #}
+    {# third party layer control container #}
     <div class="third-party-control-container map-control-panel-box">
-        <div class="row">
-            <div class="col-md-12" style="padding-right: 0">
+        {% if preferences.SiteSetting.show_third_party_layer %}
+            <div class="row">
+                <div class="col-md-12" style="padding-right: 0">
                 <span class="title">
                     THIRD PARTY LAYER
                 </span>
-                <div class="close-button map-result-close pull-right">
-                    <img class="close-icon" src="/static/img/close_icon.svg">
+                    <div class="close-button map-result-close pull-right">
+                        <img class="close-icon"
+                             src="/static/img/close_icon.svg">
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="row content" style="border-top: 1px solid darkgray; margin-top: 3px">
-            <ul id="third-party-options" style="width:100%; height: 445px;">
-                <li data-name="MiniSASS" style="height: 180px !important;">
-                    <div class="row-title">
-                        <input type="checkbox" value="MiniSASS" class="mini-sass-check">
-                        MiniSASS
-                    </div>
-                    <small class="text-muted">
-                        MiniSASS is a citizen science tool which can be used by anyone to monitor the health of a river.
-                        The data are served with permission from <a href="http://www.minisass.org/en/">http://www.minisass.org/en/</a>, and further information about the tool is available via this website.
-                    </small>
-                </li>
-                <li data-name="InWARDS" style="height: 255px !important;">
-                    <div class="row-title">
-                        <input type="checkbox" value="InWARDS" class="inward-check">
-                        <span class="label">InWARDS Water Quality</span>
-                    </div>
-                    <small class="text-muted">
-                        InWaRDS is a Decision-support for integrated water resources management developed by AWARD (the Association for Water and Rural Development).
-                        The data are served with permission,
-                        and further information is available via their website: <a href="http://award.org.za/index.php/focus-areas/water/the-inwards-decision-support-for-integrated-water-resources-management-in-the-olifants/">
-                        http://award.org.za/index.php/focus-areas/water/the-inwards-decision-support-for-integrated-water-resources-management-in-the-olifants/</a>
-                    </small>
-                </li>
-            </ul>
+            <div class="row content"
+                 style="border-top: 1px solid darkgray; margin-top: 3px">
+                <ul id="third-party-options"
+                    style="width:100%; height: 445px;">
+                    <li data-name="MiniSASS" style="height: 180px !important;">
+                        <div class="row-title">
+                            <input type="checkbox" value="MiniSASS"
+                                   class="mini-sass-check">
+                            MiniSASS
+                        </div>
+                        <small class="text-muted">
+                            MiniSASS is a citizen science tool which can be
+                            used by anyone to monitor the health of a river.
+                            The data are served with permission from <a
+                                href="http://www.minisass.org/en/">http://www.minisass.org/en/</a>,
+                            and further information about the tool is available
+                            via this website.
+                        </small>
+                    </li>
+                    <li data-name="InWARDS" style="height: 255px !important;">
+                        <div class="row-title">
+                            <input type="checkbox" value="InWARDS"
+                                   class="inward-check">
+                            <span class="label">InWARDS Water Quality</span>
+                        </div>
+                        <small class="text-muted">
+                            InWaRDS is a Decision-support for integrated water
+                            resources management developed by AWARD (the
+                            Association for Water and Rural Development).
+                            The data are served with permission,
+                            and further information is available via their
+                            website: <a
+                                href="http://award.org.za/index.php/focus-areas/water/the-inwards-decision-support-for-integrated-water-resources-management-in-the-olifants/">
+                            http://award.org.za/index.php/focus-areas/water/the-inwards-decision-support-for-integrated-water-resources-management-in-the-olifants/</a>
+                        </small>
+                    </li>
+                </ul>
+            </div>
+        {% endif %}
     </div>
 </script>
 
@@ -585,12 +601,14 @@
              data-content="Layer Selector">
             <i class="fa fa-map" aria-hidden="true"></i>
         </div>
+        {% if preferences.SiteSetting.show_third_party_layer %}
         <div id="third-party-layer-control" class="third-party-layer-control sub-control-panel"
         data-toggle="popover"
              data-placement="right" data-trigger="hover"
              data-content="Third-party Layer Selector">
             <i class="fa fa-map-o" aria-hidden="true"></i>
         </div>
+        {% endif %}
         <div id="locate-control" class="locate-control sub-control-panel"
         data-toggle="popover"
              data-placement="right" data-trigger="hover"
