--- a/bims/templates/taxa_management.html
+++ b/bims/templates/taxa_management.html
@@ -137,7 +137,7 @@
     </div>
     <div class="body-form container">
         <div class="dashboard-title">
-            <h2>Taxa management</h2>
+            <h2>Taxon Management</h2>
         </div>
         <div class="dashboard-body">
             <ul id="sortable">
