--- a/bims/templates/collections_uploader.html
+++ b/bims/templates/collections_uploader.html
@@ -19,7 +19,7 @@
         <div class="jumbotron csv-uploader-wrapper">
 
             <div class="help-block-space"></div>
-            <h3>Upload Collections data</h3>
+            <h3>Upload Occurrence Data</h3>
             <div id="csv-alert" class="alert alert-warning" role="alert" style="display: none;">
             </div>
             <div class="modal-body">
