--- a/bims/templates/navigation_bar.html
+++ b/bims/templates/navigation_bar.html
@@ -147,11 +147,11 @@
                             <a class="dropdown-item" href="/profile/">Profile</a>
                             <div class="dropdown-divider"></div>
                             {% if user.is_staff or user.is_superuser %}
-                                <a class="dropdown-item" href="/upload-taxa/">Upload Taxa</a>
-                                <a class="dropdown-item" href="/upload-collections/">Upload Collections</a>
+                                <a class="dropdown-item" href="/upload-taxa/">Upload Taxonomic Data</a>
+                                <a class="dropdown-item" href="/upload-collections/">Upload Occurrence Data</a>
                                 <a class="dropdown-item" href="/harvest-collections/">Harvest From GBIF</a>
                                 <a class="dropdown-item" href="/dashboard-management/">Edit Dashboard</a>
-                                <a class="dropdown-item" href="/taxa-management/">Edit Taxa</a>
+                                <a class="dropdown-item" href="/taxa-management/">Taxon Management</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="/admin/">Admin Page</a>
                                 <a class="dropdown-item" href="/cms">Wagtail Admin</a>
