--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -132,7 +132,7 @@
 
         <div class="spatial-filter-wrapper"></div>
 
-        {% if use_ecological_condition %}
+        {% if use_ecological_condition and preferences.SiteSetting.enable_sass %}
             <div class="row sub-filter">
                 <div class="col-lg-12 subtitle">
                     ECOLOGICAL CATEGORY (SASS) <i
