Only show river for FBIS

--- a/bims/templates/map_page/side-panel-templates.html
+++ b/bims/templates/map_page/side-panel-templates.html
@@ -249,10 +249,12 @@
                 <div class="col-8 value-column"><%= value %></div>
             </div>
         <% }); %>
+        <% if (site_detail_info.river) { %>
         <div class="row">
             <div class="col-4 caption-column">River</div>
             <div class="col-8 value-column"><%= site_detail_info.river %></div>
         </div>
+        <% } %>
     </div>
 </script>
 
