--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -76,6 +76,23 @@
             <div class="logo hide-logo pull-right"><img width="50"
                                                         src="{% static 'img/bims-stamp.png' %}">
             </div>
+
+            <div class="modal fade" id="alertModal" tabindex="-1" role="dialog"
+                 aria-labelledby="alertModalLabel" aria-hidden="true"
+                 style="z-index: 99999">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body" id="alertModalBody">
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary"
+                                    data-dismiss="modal">Close
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             {% if messages %}
                     {% for message in messages %}
                         {% if message.extra_tags == 'sass_record' %}
