Update csv download in multi sites dashboard

--- a/sass/templates/sass_dashboard_multiple_sites.html
+++ b/sass/templates/sass_dashboard_multiple_sites.html
@@ -34,6 +34,23 @@
         <div class="logo hide-logo pull-right"><img width="50"
                                                     src="{% static 'img/bims-stamp.png' %}">
         </div>
+
+         <div class="modal fade" id="alertModal" tabindex="-1" role="dialog"
+             aria-labelledby="alertModalLabel" aria-hidden="true"
+             style="z-index: 99999">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-body" id="alertModalBody">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary"
+                                data-dismiss="modal">Close
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="dashboard-title">
             <h2> Multiple Sites Dashboard - SASS
                 <span id="current_page"></span><span id="total_pages"></span>
