Update side panel

--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -2659,19 +2659,16 @@ div:hover::-webkit-scrollbar {
 }
 
 #site-details-wrapper .row {
-    border: 1px solid #d3d4d1;
-    background-color: #ebebeb;
-    font-family: "Roboto Condensed";
-    color: #4a4a4a;
     font-size: 0.75rem;
     line-height: 2rem;
-
+    border-bottom: 1px solid #e0e0e0;
 }
 
 #site-details-wrapper .row .value-column {
     color: #3D647D;
     text-align: right;
     align-self: center;
+    line-height: 2.3em;
 }
 
 #site-details-wrapper .row .caption-column {
