--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -686,7 +686,7 @@
                             <i class="fa fa-download"></i>
                         </button>
                     </div>
-                    <div class="card-body" style="height: 100%; width: 100%">
+                    <div class="card-body" style="height: 100%; width: 100%;">
                         <div class="col-12 canvas-container">
                             <div class="chart-loading">Fetching...</div>
                             <canvas id="species-ssdd-cons-status-bar-chart-canvas"></canvas>
