--- a/bims/templates/navigation_bar.html
+++ b/bims/templates/navigation_bar.html
@@ -152,10 +152,12 @@
                                 <a class="dropdown-item" href="/harvest-collections/">Harvest From GBIF</a>
                                 <a class="dropdown-item" href="/dashboard-management/">Edit Dashboard</a>
                                 <a class="dropdown-item" href="/taxa-management/">Taxon Management</a>
+                                <a class="dropdown-item" href="/download-request/">Download Requests</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="/admin/">Admin Page</a>
                                 <a class="dropdown-item" href="/cms">Wagtail Admin</a>
                                 <a class="dropdown-item" href="/backups-management">Backups</a>
+                                <a class="dropdown-item" href="/summary-report">Summary Report</a>
                             {% endif %}
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/accounts/logout/">Log Out</a>
