--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -729,7 +729,7 @@
                 <div class="modal-body">
                     <p class="coordinate-form">
                         Please enter the decimal latitude (negative
-                        degrees North) and longitude (positive degrees
+                        degrees South) and longitude (positive degrees
                         East) coordinates of your area of interest below!
                         <br/> <br/> e.g. for Cape Town being -33.xxx 19.xxx
                     </p>
